--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: lavenderblush;
-    padding: 30px;
-    margin: 0 auto;
+    background-color: #f5f5f5;
+    padding: 0;
+    margin: auto;
     font-family: 'Montserrat', sans-serif;
     text-align: justify;
     font-size: 15px;
@@ -9,9 +9,33 @@ body {
     line-height: 1.5;
 }
 
+.section {
+    padding: 30px;
+    margin: 0 2rem;
+}
+
+header {
+    background-color: #e6e6fa;
+    margin: 0;
+    padding: 2rem;
+    border-bottom: 7px double #d1d1fd;
+}
+
+header h1 {
+    text-align: center;
+}
+
+.navigace {
+    display: inline;
+}
+
+nav {
+    text-align: center;
+}
+
 h1,
 h2 {
-    color: lightskyblue;
+    color: #2a2acf;
     padding-top: 1em;
     }
 
@@ -19,9 +43,9 @@ h2 {
     margin-top: 10px;
 }
 
-img {
+.profilove-foto img {
     border-radius: 50%;
-    border: 7px double lightblue;
+    border: 7px double #d1d1fd;
     min-height: 20vh;
     float: right;
     padding: 3px;
@@ -30,17 +54,45 @@ img {
 
 a {
     color: rgb(32,32,32);
-    background-color: #ffd0d7;
+    background-color: white;
     font-size: larger;
     text-decoration: none;
     padding: 2%;
     margin-top: 0.5em;
     margin-right: 1em;
     display: inline-block;
+    border-radius: 5px;
 }
 
 a:hover,
 a:focus,
 a:active {
-    background-color: mintcream;
+    background-color: #2a2acf60;
+}
+
+.fotogalerie img {
+    padding: 20px;
+    box-shadow: black 4px 6px 20px;
+    margin-right: 4rem;
+    margin-top: 2rem;
+}
+
+.pozadi-kontakt {
+    background-color: #e6e6fa;
+    margin: 0;
+    padding: 2rem;
+    border-top: 7px double #d1d1fd;
+    border-bottom: 7px double #5e5efa;
+}
+
+footer {
+    background-color: #5e5efa;
+    color: white;
+    margin: 0;
+}
+
+footer p {
+    margin: 0;
+    padding: 1.5rem;
+    text-align: center;
 }
